# open-proof-corpus

./: .gitignore  README.md  pyproject.toml
configs/judges/: judges.json  pass_at_n.json  proof_verification.json
configs/models/baseline/: naive.yaml
configs/models/deepseek/: deepseek_distill_8b.yaml  r1_0528.yaml
configs/projects/: best_of_n.yaml  pass_at_n.yaml  proof_verification.yaml
configs/setting/: continuous.yaml  discrete.yaml
configs/solvers/: best_of_n.yaml  pass_at_n.yaml  proof_verification.yaml
notebooks/: extraction.ipynb
scripts/: best_of_n_summary.py  convert.py  distribute.py  judge.py  judge_inference.py  judge_results.py  monitor.py  postprocess.py  process.py  recover.py  run_pass_at_n.py  solve.py  validate.py
src/grading/: api.py  best_of_n.py  configs.py  distribute.py  parser.py  postprocess.py  runner.py  solve.py  verifier.py
verl/runs/: best_of_n_actor.py  best_of_n_critic.py  inference.py  preprocess.py  train.sh
verl/slurm/: best_of_n.sbatch  inference.sbatch  setup.sh  train.sbatch
website/: main.py  pyproject.toml  wsgi.py
website/data/sample/IMC/: 2000_1.json  2000_4.json  2000_5.json
website/data/sample/IMOSL/: 1977_27.json  1980_11.json  1989_26.json
website/data/sample/USAMO/: 2000_4.json
website/static/css/: data.css  index.css  instructions.css  problem_review.css  sidebar.css
website/static/js/: begin.js  data.js  index.js  review.js  sidebar.js  upload.js
website/templates/: 404.html  begin.html  index.html  instructions.html  problem_review.html  problem_review_main.html
(+293 files in other folders)
